--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "coffee-script": "~1.6.3",
     "gulp": "~3.2.1",
     "gulp-coffee": "~1.2.2",
-    "gulp-util": "~2.2.0"
+    "gulp-util": "~2.2.0",
+    "event-stream": "~3.0.20"
   }
 }
